style: #434 table fixed overflow-y

--- a/theme/dt-theme/default/table.less
+++ b/theme/dt-theme/default/table.less
@@ -193,7 +193,7 @@
                         flex: 1;
                         display: flex;
                         flex-direction: column;
-                        overflow-y: scroll;
+                        overflow-y: auto;
                         .ant-table-body {
                             flex: 1;
                             .ant-table-placeholder {
